# Communication_Efficient_Federated_Inference

./: README.md  pyproject.toml
app/: app.py
app/common/: main.py  utils.py
app/pages/: client.py  clients.py  data.py
jupyter/: archive.py  attention.ipynb  main.ipynb  oned_data.ipynb
jupyter/archive/: Untitled.ipynb  evaluation _separated_projection.ipynb  evaluation copy 2.ipynb  evaluation copy reduce_projection.ipynb  evaluation.ipynb  evaluation_early_stopper.ipynb  evaluation_on_device.ipynb  evaluation_projection.ipynb  evulation1_performance_fmnist_accuracy_e.ipynb  evulation1_performance_mnist_accuracy.ipynb  hybrid_training.ipynb  information_gate_v1_learning_experiment-Copy1.ipynb  information_gate_v1_learning_experiment.ipynb  isolated_naive_experiment.ipynb  main.ipynb  on_cloud_training.ipynb  on_device_training.ipynb  split learning.ipynb  split_learning_experiment.ipynb  visualizations.ipynb
jupyter/training/: cifar_training.ipynb  hybrid_training.ipynb  on_cloud_training.ipynb  on_device_training.ipynb
src/federated_inference/: .env  .env.template  .gitignore  requirements.txt
src/federated_inference/client/: sensor_view.py
src/federated_inference/common/: cost_calculator.py  early_stopper.py  environment.py  utils.py
src/federated_inference/configs/: model_configs.py  transform_config.py
src/federated_inference/dataset/: __init__.py  adult.py  banking.py  cifar10.py  client.py  dataset.py  fmnist.py  mnist.py
src/federated_inference/simulations/: simulation.py  utils.py
src/federated_inference/transform/: __init__.py  utils.py  (+4 more)
(+71 files in other folders)
