[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "federated"
version = "0.1.0"

authors = [
  {name = "Denise-Phi Khuu", email = "denise.khuu@outlook.de"},
]

license = {file = "LICENSE"}

readme = {file = "README.md", content-type = "text/markdown"}

description = ""

keywords = ["AI"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.9",
]

[project.optional-dependencies]
dev = [
    "pylint ~=2.14.0",
    "yapf ~=0.32.0",
]
test = [
    "pytest ~=3.0.0",
    "requests ~=2.32.2"
]

[tool.setuptools]
packages = ["federated_inference"]
package-dir = {"" = "src"}


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.pyright]
pythonVersion = "3.8"
include = ["src/eta", "tests"]
typeCheckingMode = "basic"